--- a/microservice-commande.properties
+++ b/microservice-commande.properties
@@ -1,9 +1,15 @@
+spring.application.name=microservice-commandes
 server.port=9001
 
+# Import Config Server
+spring.config.import=configserver:http://localhost:9101
+
+spring.cloud.config.label=main
+spring.cloud.config.profile=dev
+
+# JPA and H2 Console
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
-
-
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
@@ -11,4 +17,14 @@ spring.datasource.password=
 spring.datasource.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=none
 
-mes-config-ms.commndes-last=2
+# Custom Properties
+mes-config-ms.commandes-last=2
+
+# Management Endpoints
+management.endpoints.web.exposure.include=refresh,health
+management.endpoint.health.show-details=always
+
+# Logging
+logging.level.root=INFO
+logging.level.com.commande.config_server=INFO
+logging.level.org.springframework.boot.web.embedded.tomcat=INFO
