--- a/microservice-commande.properties
+++ b/microservice-commande.properties
@@ -1,11 +1,17 @@
+# Application Configuration
 spring.application.name=microservice-commandes
-server.port=9001
+server.port=8080
 
-# Import Config Server
+# Config Server Configuration
 spring.config.import=configserver:http://localhost:9101
 
-spring.cloud.config.label=main
-spring.cloud.config.profile=dev
+# Actuator Configuration
+management.endpoints.web.exposure.include=health,refresh
+management.endpoint.health.show-details=always
+management.health.diskspace.enabled=true
+
+# Eureka Client Configuration (if using Eureka)
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 # JPA and H2 Console
 spring.jpa.show-sql=true
@@ -19,11 +25,3 @@ spring.jpa.hibernate.ddl-auto=none
 
 # Custom Properties
 mes-config-ms.commandes-last=30
-# Management Endpoints
-management.endpoints.web.exposure.include=refresh,health
-management.endpoint.health.show-details=always
-
-# Logging
-logging.level.root=INFO
-logging.level.com.commande.config_server=INFO
-logging.level.org.springframework.boot.web.embedded.tomcat=INFO
