--- a/microservice-commande.properties
+++ b/microservice-commande.properties
@@ -13,12 +13,15 @@ management.health.diskspace.enabled=true
 # JPA and H2 Console
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
+
+# Use a file-based H2 database instead of in-memory
+spring.datasource.url=jdbc:h2:file:./data/testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=none
 
+# Automatically create or update the database schema
+spring.jpa.hibernate.ddl-auto=update
 # Custom Properties
 mes-config-ms.commandes-last=5
