--- a/microservice-commande.properties
+++ b/microservice-commande.properties
@@ -6,7 +6,7 @@ server.port=8080
 spring.config.import=configserver:http://localhost:9101
 
 # Actuator Configuration
-management.endpoints.web.exposure.include=health,refresh
+management.endpoints.web.exposure.include=health,refresh,env
 management.endpoint.health.show-details=always
 management.health.diskspace.enabled=true
 
