--- a/microservice-commande.properties
+++ b/microservice-commande.properties
@@ -15,7 +15,7 @@ spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
 # Use a file-based H2 database instead of in-memory
-spring.datasource.url=jdbc:h2:file:./data/testdb
+spring.datasource.url=jdbc:h2:file:C:/testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
